# cmd/api/main.go
@@ -6,6 +6,25 @@ import (
 	"github.com/NamespaceManager/internal/app"
 )
 
+// @title NamespaceManager API
+// @version 1.0
+// @description Resource Allocation and Management in Multi-Cluster project
+// @termsOfService http://swagger.io/terms/
+
+// @contact.name API Support
+// @contact.url http://www.swagger.io/support
+// @contact.email support@swagger.io
+
+// @license.name Apache 2.0
+// @license.url http://www.apache.org/licenses/LICENSE-2.0.html
+
+// @host localhost:8080
+// @BasePath /
+
+// @securityDefinitions.apikey ApiKeyAuth
+// @in header
+// @name Authorization
+
 func main() {
 	db, err := app.InitDataBase()
 	if err != nil {
